about us fixed others pages connected to home page

--- a/careers_page.html
+++ b/careers_page.html
@@ -235,7 +235,9 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
+          <a href="index_sample_1_fixed.html">
             <img src="images/logo.png" alt="Hatchlab Logo">
+            </a>
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
@@ -243,7 +245,10 @@
             <a href="services.html">Service</a>
             <a href="careers_page.html">Career</a>
             <a href="contactus.html">Contact</a>
-            <button class="get-in-touch-btn" id="getInTouchBtn">Get In Touch</button>
+            <button class="get-in-touch-btn" id="getInTouchBtn">
+  Get In Touch
+</button>
+
         </nav>
     </header>
 
@@ -342,6 +347,25 @@ document.addEventListener("DOMContentLoaded", function() {
   faders.forEach(fader => observer.observe(fader));
 });
 </script>
+
+<!-- CONTACT MODAL -->
+<div id="contactModal" class="contact-modal">
+  <div class="contact-modal-content">
+    <span class="close-contact-modal">&times;</span>
+    <h3>Get In Touch</h3>
+
+    <div class="contact-info-item">
+      <a href="tel:+918276057111">📞 +91 8276057111</a>
+    </div>
+
+    <div class="contact-info-item">
+      <a href="mailto:info@hatchlabinnovations.com">
+        📧 info@hatchlabinnovations.com
+      </a>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
