--- a/contactus.html
+++ b/contactus.html
@@ -239,7 +239,9 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
+          <a href="index_sample_1_fixed.html">
             <img src="images/logo.png" alt="Hatchlab Logo">
+            </a>
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
