--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
-            <img src="images/logo.png" alt="Hatchlab Logo">
+            <a href="index_sample_1_fixed.html"><img src="images/logo.png" alt="Hatchlab Logo"></a>
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
