--- a/contactus.html
+++ b/contactus.html
@@ -239,7 +239,7 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
-            <img src="images/logo.png" alt="Hatchlab Logo">
+            <a href="index_sample_1_fixed.html"></a><img src="images/logo.png" alt="Hatchlab Logo">
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
