--- a/careers_page.html
+++ b/careers_page.html
@@ -237,7 +237,7 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
-            <a href="index_sample_1_fixed.html"></a><img src="images/logo.png" alt="Hatchlab Logo">
+            <a href="index_sample_1_fixed.html"><img src="images/logo.png" alt="Hatchlab Logo"></a>
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
@@ -408,10 +408,12 @@ particlesJS("particles-js", {
 
 <script>
 // Glow Cursor Effect
-const glowCursor = document.querySelector('.glow-cursor');
-document.addEventListener('mousemove', (e) => {
-  glowCursor.style.left = e.clientX + 'px';
-  glowCursor.style.top = e.clientY + 'px';
+document.addEventListener('DOMContentLoaded', function() {
+    const glowCursor = document.querySelector('.glow-cursor');
+    document.addEventListener('mousemove', (e) => {
+        glowCursor.style.left = e.clientX + 'px';
+        glowCursor.style.top = e.clientY + 'px';
+    });
 });
 </script>
 
