--- a/contactus.html
+++ b/contactus.html
@@ -239,7 +239,7 @@
     <div class="glow-cursor"></div>
     <header class="main-header">
         <div class="header-logo">
-            <a href="index_sample_1_fixed.html"></a><img src="images/logo.png" alt="Hatchlab Logo">
+            <a href="index_sample_1_fixed.html"><img src="images/logo.png" alt="Hatchlab Logo"></a>
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
@@ -359,6 +359,15 @@ document.getElementById("connectForm").onsubmit = (e) => {
     alert("Thank you! We will contact you soon.");
     modal.style.display = "none";
 };
+
+// Glow Cursor Effect
+document.addEventListener('DOMContentLoaded', function() {
+    const glowCursor = document.querySelector('.glow-cursor');
+    document.addEventListener('mousemove', (e) => {
+        glowCursor.style.left = e.clientX + 'px';
+        glowCursor.style.top = e.clientY + 'px';
+    });
+});
 </script>
 
 </body>
