--- a/contactus.html
+++ b/contactus.html
@@ -4,14 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Hatchlab Innovations</title>
+
     <link rel="stylesheet" href="contactus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <!-- ADD PARTICLES.JS -->
+    <!-- Particles -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <style>
-        /* Particle containers */
+        /* ===================== CUSTOM GLOW CURSOR ===================== */
+        body {
+            cursor: none;
+        }
+
+        .glow-cursor {
+            position: fixed;
+            width: 16px;
+            height: 16px;
+            background: radial-gradient(
+                circle,
+                #ffff00 0%,
+                rgba(255, 255, 0, 0.35) 50%,
+                transparent 70%
+            );
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 99999;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 0 12px #ffd700;
+        }
+
+        @media (max-width: 768px) {
+            body { cursor: default; }
+            .glow-cursor { display: none; }
+        }
+
+        /* ===================== PARTICLES ===================== */
         #particles-left, #particles-right {
             position: absolute;
             top: 0;
@@ -20,226 +48,95 @@
             z-index: -1;
         }
 
-        #particles-left {
-            left: 0;
-        }
+        #particles-left { left: 0; }
+        #particles-right { right: 0; }
 
-        #particles-right {
-            right: 0;
-        }
-
-        /* Ensure container stays centered above particles */
         .container {
             position: relative;
             z-index: 10;
         }
-         @keyframes dropAndBounce {
-        0% {
-          opacity: 0;
-          transform: translateY(-100px);
+
+        /* ===================== HEADER ===================== */
+        .main-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            padding: 20px 80px;
+            background: rgba(23, 22, 31, 0.95);
+            backdrop-filter: blur(10px);
+            z-index: 1000;
+            border-bottom: 2px solid #fcd703;
         }
-        60% {
-          opacity: 1;
-          transform: translateY(10px);
+
+        .header-logo {
+            display: flex;
+            align-items: center;
+            gap: 15px;
         }
-        80% {
-          transform: translateY(-5px);
+
+        .header-logo img {
+            width: 50px;
         }
-        100% {
-          opacity: 1;
-          transform: translateY(0);
+
+        .brand-name {
+            color: #fff;
+            font-size: 20px;
+            font-weight: 600;
         }
-      }
 
-      @keyframes continuousBounce {
-        0%, 100% {
-          transform: translateY(0);
+        .header-nav {
+            display: flex;
+            gap: 35px;
+            align-items: center;
+            margin-left: auto;
         }
-        50% {
-          transform: translateY(-10px);
+
+        .header-nav a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 16px;
+            transition: 0.3s;
         }
-      }
 
-      .word {
-        opacity: 0;
-        animation: dropAndBounce 0.8s ease-out forwards;
-      }
+        .header-nav a:hover {
+            color: #fcd703;
+        }
 
-      .word.bouncing {
-        animation: continuousBounce 2s ease-in-out infinite;
-        opacity: 1;
-      }
+        .get-in-touch-btn {
+            padding: 12px 24px;
+            background: #fff;
+            border: none;
+            border-radius: 6px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+            box-shadow: 0 0 20px rgba(252, 215, 3, 0.3);
+            font-family: 'Lora', serif;
+        }
 
-      .word:nth-child(1) { animation-delay: 0s; }
-      .word:nth-child(2) { animation-delay: 0.1s; }
-      .word:nth-child(3) { animation-delay: 0.2s; }
-      .word:nth-child(4) { animation-delay: 0.3s; }
-      .word:nth-child(5) { animation-delay: 0.4s; }
-
-      .main-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        padding: 20px 80px;
-        background: rgba(23, 22, 31, 0.95);
-        backdrop-filter: blur(10px);
-        z-index: 1000;
-        border-bottom: 2px solid #fcd703;
-      }
-
-      .header-logo {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        margin-left:20px;
-      }
-
-      .header-logo img {
-        width: 50px;
-        height: auto;
-      }
-
-      .brand-name {
-        color: #fff;
-        font-size: 20px;
-        font-weight: 600;
-        letter-spacing: 0.5px;
-      }
-
-      .header-nav {
-        display: flex;
-        gap: 35px;
-        align-items: center;
-        margin-left: auto;
-      }
-
-      .header-nav a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 16px;
-        transition: 0.3s;
-        font-weight: 500;
-      }
-
-      .header-nav a:hover {
-        color: #fcd703;
-      }
-
-      .connect-button {
-        padding: 8px 20px;
-        background: transparent;
-        border: 2px solid #fcd703;
-        color: #fcd703;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: 600;
-        transition: 0.3s;
-      }
-
-      .connect-button:hover {
-        background: #fcd703;
-        color: #000;
-      }
-
-      .get-in-touch-btn {
-        padding: 12px 24px;
-        background: #fff;
-        border: none;
-        color: #000;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: bold;
-        transition: all 0.3s ease;
-        box-shadow: 0 0 20px rgba(252, 215, 3, 0.3);
-        position: relative;
-        overflow: hidden;
-      }
-
-      .get-in-touch-btn:hover {
-        background: #fcd703;
-        transform: scale(1.05);
-        box-shadow: 0 0 40px rgba(252, 215, 3, 0.8), 0 0 60px rgba(252, 215, 3, 0.6);
-      }
-
-      .contact-modal {
-        display: none;
-        position: fixed;
-        z-index: 10000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.8);
-        align-items: center;
-        justify-content: center;
-      }
-
-      .contact-modal-content {
-        background: rgba(23, 22, 31, 0.95);
-        backdrop-filter: blur(10px);
-        padding: 40px;
-        border-radius: 10px;
-        border: 2px solid #fcd703;
-        max-width: 400px;
-        width: 90%;
-        text-align: center;
-      }
-
-      .contact-modal-content h3 {
-        color: #fcd703;
-        margin-bottom: 30px;
-        font-size: 24px;
-      }
-
-      .contact-info-item {
-        margin: 20px 0;
-      }
-
-      .contact-info-item a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 18px;
-        transition: 0.3s;
-      }
-
-      .contact-info-item a:hover {
-        color: #fcd703;
-      }
-
-      .close-contact-modal {
-        color: #fff;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-        cursor: pointer;
-        line-height: 20px;
-      }
-
-      .close-contact-modal:hover {
-        color: #fcd703;
-      }
+        .get-in-touch-btn:hover {
+            background: #fcd703;
+            transform: scale(1.05);
+        }
     </style>
-
 </head>
+
 <body>
 
-    <!-- LEFT PARTICLES -->
+    <!-- PARTICLES -->
     <div id="particles-left"></div>
-
-    <!-- RIGHT PARTICLES -->
     <div id="particles-right"></div>
 
-
-
+    <!-- GLOW CURSOR -->
     <div class="glow-cursor"></div>
+
+    <!-- HEADER -->
     <header class="main-header">
         <div class="header-logo">
-            <a href="index_sample_1_fixed.html"><img src="images/logo.png" alt="Hatchlab Logo"></a>
+            <img src="images/logo.png" alt="Hatchlab Logo">
             <span class="brand-name">Hatchlab Innovations</span>
         </div>
         <nav class="header-nav">
@@ -247,11 +144,13 @@
             <a href="services.html">Service</a>
             <a href="careers_page.html">Career</a>
             <a href="contactus.html">Contact</a>
-            <button class="get-in-touch-btn" id="getInTouchBtn">Get In Touch</button>
+            <button class="get-in-touch-btn">Get In Touch</button>
         </nav>
     </header>
-<br><br><br><br>
-    
+
+    <br><br><br><br>
+
+    <!-- CONTENT -->
     <div class="container">
         <h1>Contact Us</h1>
 
@@ -262,113 +161,52 @@
 
         <div class="section">
             <h2>Email</h2>
-            <a href="mailto:info@hatchlabinnovations.com" class="email-item">info@hatchlabinnovations.com</a>
-            <a href="mailto:admin@hatchlabinnovations.com" class="email-item">admin@hatchlabinnovations.com</a>
+            <a href="mailto:info@hatchlabinnovations.com" class="email-item">
+                info@hatchlabinnovations.com
+            </a>
+            <a href="mailto:admin@hatchlabinnovations.com" class="email-item">
+                admin@hatchlabinnovations.com
+            </a>
         </div>
     </div>
 
-
+    <!-- FOOTER -->
     <footer class="footer-section">
-        <div class="footer-gradient">
-            <div></div><div></div><div></div><div></div>
-        </div>
-
         <div class="footer-content">
-            <div class="footer-column">
-                <div class="footer-logo">
-                    <img src="images/logo.png" alt="HatchLab Logo">
-                </div>
-                <p class="footer-meta">© 2025 HatchLab Innovations Pvt. Ltd.<br>All rights reserved.</p>
-            </div>
-
-           
-
-            <div class="footer-column">
-                <div class="footer-contact">
-                    <a href="tel:+918276057111">+91 8276057111</a>
-                    <a href="mailto:info@hatchlabinnovations.com">info@hatchlabinnovations.com</a>
-                    <a href="mailto:admin@hatchlabinnovations.com">admin@hatchlabinnovations.com</a>
-                </div>
-            </div>
-
-            <div class="footer-column">
-                <form class="footer-form" action="#" onsubmit="return false;">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">Contact Us</button>
-                </form>
-            </div>
-        </div>
-
-        <div class="footer-social">
-            <p>Connect with us through -</p>
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/company/hatchlab-innovations/posts/?feedView=all" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com/hatchlabinnovations.official/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/people/Hatchlab-Innovations/61558095073459/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            </div>
+            <p>© 2025 HatchLab Innovations Pvt. Ltd.</p>
         </div>
     </footer>
 
+    <!-- ===================== SCRIPTS ===================== -->
+    <script>
+        /* GLOW CURSOR */
+        const cursor = document.querySelector(".glow-cursor");
+        document.addEventListener("mousemove", e => {
+            cursor.style.left = e.clientX + "px";
+            cursor.style.top = e.clientY + "px";
+        });
 
+        /* PARTICLES */
+        particlesJS("particles-left", {
+            particles: {
+                number: { value: 80 },
+                size: { value: 3 },
+                color: { value: "#ffffff" },
+                line_linked: { enable: true, color: "#ffffff" },
+                move: { enable: true, speed: 1.2 }
+            }
+        });
 
-
-
-
-
-
-
-
-<script>
-/* PARTICLES LEFT */
-particlesJS("particles-left", {
-    particles: {
-        number: { value: 80 },   // more particles
-        size: { value: 3 },
-        color: { value: "#ffffff" },
-        line_linked: { enable: true, color: "#ffffff" },
-        move: { enable: true, speed: 1.2 }
-    }
-});
-
-/* PARTICLES RIGHT */
-particlesJS("particles-right", {
-    particles: {
-        number: { value: 80 },   // more particles
-        size: { value: 3 },
-        color: { value: "#ffffff" },
-        line_linked: { enable: true, color: "#ffffff" },
-        move: { enable: true, speed: 1.2 }
-    }
-});
-
-
-// Modal Logic
-const modal = document.getElementById("connectModal");
-const btn = document.getElementById("connectBtn");
-const closeBtn = document.querySelector(".close-modal");
-
-btn.onclick = () => modal.style.display = "flex";
-closeBtn.onclick = () => modal.style.display = "none";
-
-window.onclick = (e) => { 
-    if (e.target === modal) modal.style.display = "none"; 
-}
-
-document.getElementById("connectForm").onsubmit = (e) => {
-    e.preventDefault();
-    alert("Thank you! We will contact you soon.");
-    modal.style.display = "none";
-};
-
-// Glow Cursor Effect
-document.addEventListener('DOMContentLoaded', function() {
-    const glowCursor = document.querySelector('.glow-cursor');
-    document.addEventListener('mousemove', (e) => {
-        glowCursor.style.left = e.clientX + 'px';
-        glowCursor.style.top = e.clientY + 'px';
-    });
-});
-</script>
+        particlesJS("particles-right", {
+            particles: {
+                number: { value: 80 },
+                size: { value: 3 },
+                color: { value: "#ffffff" },
+                line_linked: { enable: true, color: "#ffffff" },
+                move: { enable: true, speed: 1.2 }
+            }
+        });
+    </script>
 
 </body>
 </html>
