added get in touch modal

--- a/about.html
+++ b/about.html
@@ -427,5 +427,49 @@ document.addEventListener("DOMContentLoaded", function() {
   </script>
 
 
+<div id="contactModal" class="contact-modal">
+  <div class="contact-modal-content">
+    <span class="close-contact-modal">&times;</span>
+    <h3>Get In Touch</h3>
+    <div class="contact-info-item">
+      <a href="tel:+918276057111">📞 +91 8276057111</a>
+    </div>
+    <div class="contact-info-item">
+      <a href="mailto:info@hatchlabinnovations.com">📧 info@hatchlabinnovations.com</a>
+    </div>
+  </div>
+</div>
+
+
+
+<script>
+  // Get In Touch Modal Logic
+  const contactModal = document.getElementById("contactModal");
+  const getInTouchBtn = document.getElementById("getInTouchBtn");
+  const closeContactBtn = document.querySelector(".close-contact-modal");
+
+  // Open modal
+  if (getInTouchBtn) {
+    getInTouchBtn.onclick = () => {
+      contactModal.style.display = "flex";
+    };
+  }
+
+  // Close with × button
+  if (closeContactBtn) {
+    closeContactBtn.onclick = () => {
+      contactModal.style.display = "none";
+    };
+  }
+
+  // Close when clicking outside the modal content
+  window.onclick = (e) => {
+    if (e.target === contactModal) {
+      contactModal.style.display = "none";
+    }
+  };
+</script>
+
+
 </body>
 </html>
