--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -619,13 +619,21 @@
       <span class="close-contact-modal">&times;</span>
       <h3>Get In Touch</h3>
       <div class="contact-info-item">
-        <a href="tel:+918276057111">📞 +91 8276057111</a>
+        <a href="tel:+918276057111"><img src="images/yellow phone icon.png"> +91 8276057111</a>
       </div>
       <div class="contact-info-item">
         <a href="mailto:info@hatchlabinnovations.com">📧 info@hatchlabinnovations.com</a>
       </div>
     </div>
   </div>
+  <style>
+    .contact-info-item img {
+  width: 30px;          /* adjust size as needed */
+  height: auto;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+  </style>
 
   <!-- JS LIBS -->
   <script src="https://www.hatchlabinnovations.com/assets/js/jquery-3.7.1.min.js"></script>
@@ -1480,7 +1488,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-  PARTICLES INIT
   <script>
     particlesJS("particles-js", {
       "particles": {
