--- a/about.html
+++ b/about.html
@@ -451,27 +451,18 @@ document.addEventListener("DOMContentLoaded", function() {
   </script>
 
 
-  <!-- Get In Touch Modal -->
-  <div id="contactModal" class="contact-modal">
-    <div class="contact-modal-content">
-      <span class="close-contact-modal">&times;</span>
-      <h3>Get In Touch</h3>
-      <div class="contact-info-item">
-        <a href="tel:+918276057111"><img src="images/yellow phone icon.png"> +91 8276057111</a>
-      </div>
-      <div class="contact-info-item">
-        <a href="mailto:info@hatchlabinnovations.com">📧 info@hatchlabinnovations.com</a>
-      </div>
+<div id="contactModal" class="contact-modal">
+  <div class="contact-modal-content">
+    <span class="close-contact-modal">&times;</span>
+    <h3>Get In Touch</h3>
+    <div class="contact-info-item">
+      <a href="tel:+918276057111">📞 +91 8276057111</a>
+    </div>
+    <div class="contact-info-item">
+      <a href="mailto:info@hatchlabinnovations.com">📧 info@hatchlabinnovations.com</a>
     </div>
   </div>
-  <style>
-    .contact-info-item img {
-  width: 30px;          /* adjust size as needed */
-  height: auto;
-  vertical-align: middle;
-  margin-right: 8px;
-}
-  </style>
+</div>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
