--- a/careers_page.html
+++ b/careers_page.html
@@ -151,7 +151,7 @@
                 <li>Learn from industry experts</li>
                 <li>Build skills that shape your future</li>
             </ul>
-            <p>Drop Your CV at</p>
+            <p class = "drop">Drop Your CV at</p>
             <a href="mailto:hrd@hatchlabinnovations.com" class="email">hrd@hatchlabinnovations.com</a>
         </div>
 
@@ -159,7 +159,7 @@
         <div class="card">
             <h3>Come, Build the Future With Us</h3>
             <p2>Explore Open Roles</p>
-            <p>Drop Your CV at</p>
+            <p class = "drop">Drop Your CV at</p>
             <a href="mailto:hrd@hatchlabinnovations.com" class="email">hrd@hatchlabinnovations.com</a>
         </div>
     </div>
