--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -1675,7 +1675,7 @@ document.addEventListener("DOMContentLoaded", () => {
     const inputs = document.querySelectorAll('input, textarea, button, .close-modal, .close-contact-modal');
     inputs.forEach(input => {
         input.addEventListener('mouseenter', () => {
-            cursor.style.width = '20px';
+            cursor.gitstyle.width = '20px';
             cursor.style.height = '20px';
             cursor.style.backgroundColor = 'rgba(255, 215, 0, 0.1)';
         });
