--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
       body {
         cursor: none;
         font-family: 'Lora', serif;
+        background-color: #0f0f16;
       }
 
       * {
@@ -207,7 +208,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(15, 15, 22, 0.8);
       align-items: center;
       justify-content: center;
     }
