New image Of Our Initiative

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
               <div class="d-flex flex-column justify-content-between h-100">
                 <div class="initiative-item-title">The Retreat Darjeeling</div>
                 <div>
-                  <img class="breathing-image" src="images/initiative/retreat_leftside.png" alt="Retreat left side">
+                  <img class="breathing-image" src="images/initiative/_RAH3609.jpg" alt="Retreat left side">
                 </div>
               </div>
             </div>
